tests/specs/ecosystem/radix_ui_fork/react_use_escape_keydown/0_0_8.test
radix-ui-fork/react-use-escape-keydown/0.0.8
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'KeyboardEvent'.
function useEscapeKeydown(onEscapeKeyDownProp?: (event: KeyboardEvent) => void, ownerDocument?: Document): void {}
                                                        ~~~~~~~~~~~~~
    at file://<tmpdir>/src/useEscapeKeydown.tsx:4:57

TS2304 [ERROR]: Cannot find name 'Document'.
function useEscapeKeydown(onEscapeKeyDownProp?: (event: KeyboardEvent) => void, ownerDocument?: Document): void {}
                                                                                                ~~~~~~~~
    at file://<tmpdir>/src/useEscapeKeydown.tsx:4:97

Found 2 errors.

error: Type checking failed.

